# PesaBit

./: .env.template  .gitignore  Cargo.toml  Dockerfile  GO_LIVE_READY.md  Makefile  PRODUCTION_READINESS_REPORT.md  PROJECT_COMPLETE.md  README.md  SECURITY_IMPROVEMENTS.md  STARTUP_GUIDE.md  dev.ps1  dev.sh  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.staging.yml  docker-compose.yml  start-pesabit-simple.ps1  start-pesabit.bat  start-pesabit.ps1
_/apps/web/src/app/: page.jsx
_/apps/web/src/app/auth/register/: page.jsx
config/: env.example
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LoadingScreen.tsx  ProtectedRoute.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts
infrastructure/kubernetes/: ingress.yaml
infrastructure/monitoring/: alerting_rules.yml  loki.yml  prometheus.yml  promtail.yml
infrastructure/monitoring/grafana/dashboards/: pesabit-overview.json  pesabit-production.json
infrastructure/monitoring/grafana/provisioning/dashboards/: dashboard.yml
infrastructure/postgres/init/: 01-init-databases.sh
migrations/: 001_create_types.sql  002_create_users.sql  003_create_wallets.sql  004_create_transactions.sql  005_create_supporting_tables.sql  006_create_audit_and_views.sql
scripts/: backup-recovery.sh  deploy-production-k8s.sh  deploy-production.ps1  deploy-production.sh  go-live-validation.sh  load-test.sh  security-audit.sh  security-scan.sh
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: main.rs  middleware_auth.rs  middleware_rate_limit.rs  service_client.rs
services/payment-service/: Cargo.toml  Dockerfile
services/payment-service/src/: domain.rs  main.rs
services/user-service/: Cargo.toml  Dockerfile
services/user-service/src/: domain.rs  main.rs  repository.rs  service.rs
shared/auth/: Cargo.toml
shared/auth/src/: lib.rs
shared/certificates/: Cargo.toml
shared/certificates/src/: lib.rs
shared/compliance/: Cargo.toml
shared/compliance/src/: lib.rs
shared/config/: Cargo.toml
shared/config/src/: lib.rs
shared/database/: Cargo.toml
shared/database/src/: lib.rs
shared/errors/: Cargo.toml
shared/errors/src/: lib.rs
shared/health/: Cargo.toml
shared/health/src/: lib.rs
shared/openapi/: Cargo.toml
shared/openapi/src/: lib.rs
shared/security/: Cargo.toml
shared/security/src/: lib.rs
shared/tracing/: Cargo.toml
shared/tracing/src/: lib.rs
shared/types/: Cargo.toml
shared/types/src/: lib.rs
tests/: integration_tests.rs
tests/common/: mod.rs
