[workspace]
members = [
    "services/api-gateway",
    "services/user-service", 
    "services/payment-service",
    "services/notification-service",
    "shared/database",
    "shared/auth",
    "shared/types",
    "shared/errors",
    "shared/tracing",
]

resolver = "2"

[workspace.dependencies]
# Core async runtime and web framework
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database and caching
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "migrate", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }

# Lightning and Bitcoin
lightning = "0.0.118"  # LDK for Lightning Network
bitcoin = "0.31"
bdk = { version = "1.0.0-alpha.8", features = ["std"] }

# Authentication and security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# HTTP client for external APIs (M-Pesa, exchange rates)
reqwest = { version = "0.11", features = ["json"] }

# Observability and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"

# Utility libraries
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
config = "0.14"
anyhow = "1.0"
thiserror = "1.0"

# Testing
mockall = "0.12"
wiremock = "0.5"