[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared libraries
shared-types = { path = "../../shared/types" }
shared-errors = { path = "../../shared/errors" }
shared-database = { path = "../../shared/database" }
shared-auth = { path = "../../shared/auth" }
shared-tracing = { path = "../../shared/tracing" }

# Web framework and async runtime
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization and validation
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# HTTP client for external services
reqwest = { workspace = true }

# Additional dependencies needed
regex = "1.10"
lazy_static = "1.4"
base64 = "0.21"
urlencoding = "2.1"

[dev-dependencies]
mockall = { workspace = true }
wiremock = { workspace = true }