[package]
name = "shared-certificates"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["fs"] }
tracing = "0.1"
shared-errors = { path = "../errors" }
