[package]
name = "shared-compliance"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["time"] }
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
shared-errors = { path = "../errors" }
shared-types = { path = "../types" }
