[package]
name = "shared-database"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
shared-errors = { path = "../errors" }